test-resources/testData/graphql/validation/schema/TypeRegistryRedefinitionErrors.graphql
schema {
    <error descr="There is already an operation 'query' defined">query</error>: Query
}

<error descr="There is already a schema defined">schema</error> {
    query: Query
    mutation: Mutation
}

<error descr="There is already a schema defined">schema</error> {
    subscription: Subscription
}

<error descr="'MyDirective' type tried to redefine existing directive 'MyDirective' type">directive</error> @MyDirective on ENUM_VALUE

directive @MyDirective on ARGUMENT_DEFINITION

type <error descr="'Query' type tried to redefine existing 'Query' type">Query</error> {
    id: ID
}

type Query {
    id: ID
}

type Mutation {
    id: ID
}

type Subscription {
    id: ID
}
